  * Added (aes-decrypt aes-key ciphertext) -> plaintext
  * Added (xor-string string mask) -> string
  * Added lib/cfb, a generic implementation of Cipher-Feedback Mode.
  * Added (key-size key) -> integer
  * Added (key-block-size key) -> integer
  * Added bin/build-lib.sh which automatically builds all modules in the
    lib subdirectory.

- 1/09/2006, Integration of LibTomCrypt
  * Added libtomcrypt 1.0 to the source tree with some light modifications to
    integrate with MOSVM.
  * Added support for LTC's pseudorandom number generators and entropy
    gathering routines.
  * Added the <random> type.
  * Added the make-random primitive.
  * Added the add-entropy primitive.
  * Added the random-string primitive.
  * Added the random-quad primitive.
  * Added the random-integer primitive.
  * Added the random-algorithm primitive.
  * Added the import-random primitive.
  * Added the export-random primitive.

- ?/??/????, Integration of Entropy from LibTomCrypt
  * Added prims/entropy.c
  * Added (gather-entropy count) -> string 
  * Added (random max) -> integer

- 1/07/2006, Buffers in the Dispatch Loop
  * Altered mqo_halt to identify reading processes and remove their
    descriptor from the reading state
  * Extended processes with a reading field that refers to a descriptor which
    caused the process to suspend while reading.
  * Extended descriptors with write buffers that may be used to asynchronously
    respond to writable events by feeding data out of the write buffer.
  * Extended descriptors with read buffers that are filled whenever a 
    dispatched descriptor signals that it is readable, and a read method
    function that will parse the read data on behalf of a suspended monitor
    process.
  * Altered write-descr to buffer data written to 
  * Renamed write-file-byte to write-descr-byte, and altered it to use the
    write buffer when writing to sockets.
  * Renamed write-file-word to write-descr-word, and altered it to use the